[package]
name = "pushlock-check"
version = "0.1.1"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"
description = "Lightweight utility for checking the availability of push window."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.4", features = ["client", "http1", "tcp"] }
tokio = { version = "1.3.0", features = ["rt"] }
