[package]
name = "pushlock-server"
version = "0.1.6-alpha.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.6" }
clap = "3.0.0-beta.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64" }
tokio = { version = "1.6.1", features = ["rt-multi-thread", "sync"] }
pushlock-lib = { path = "../pushlock-lib" }
flexi_logger = "0.18.0"
