[package]
name = "pushlock-server"
version = "0.1.6-alpha.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.8" }
clap = "3.0.0-beta.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = { version = "1.0.72" }
tokio = { version = "1.10.0", features = ["rt-multi-thread", "sync"] }
pushlock-lib = { path = "../pushlock-lib" }
flexi_logger = "0.20"
