[package]
name = "pushlock-server"
version = "0.1.6-alpha.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = "3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
pushlock-lib = { path = "../pushlock-lib" }
flexi_logger = "0.23"
