[package]
name = "pushlockctl"
version = "0.1.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.2"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
tokio = { version = "1.3.0", features = ["full"] }

