[package]
name = "pushlockctl"
version = "0.1.6-alpha.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"
description = "Utility for managing push-windows."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
clap_generate = "3.0.0-rc.4"
dirs = "4"
indoc = "1.0.3"
pushlock-lib = { path = "../pushlock-lib" }
reqwest = { version = "0.11.4", default-features = false, features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = { version = "1.0.66" }
termcolor = "1.1.2"
tokio = { version = "1.10.0", features = ["full"] }
toml = "0.5.8"
user-error = "1.2.8"
whoami = "1.1.2"
