[package]
name = "pushlockctl"
version = "0.1.6-alpha.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2021"
description = "Utility for managing push-windows."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete = "4"
dirs = "4"
indoc = "1"
pushlock-lib = { path = "../pushlock-lib" }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
termcolor = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
user-error = "1"
whoami = "1"
